client/src/components/DataFiles/DataFilesSidebar/DataFilesSidebar.scss
$data-files-wrapper-horizontal-padding: 20px;
$frontera-portal-color-primary: #9d85ef;

.data-files-sidebar {
  width: 165px;
  height: 100%;
  background: #ffffff;
  border-right: #dfdfdf;
  padding-top: 10px;
  border-right: 1px solid rgba(112, 112, 112, 0.25);
}

.data-files-sidebar .nav-link {
  padding-left: $data-files-wrapper-horizontal-padding;
  color: #707070;
}

.data-files-sidebar .nav-link.active {
  background: #dfdaf5;
}

.data-files-sidebar .nav-text {
  padding-left: 15px;
  font-size: 0.78em;
  font-weight: 500;
}

.data-files-btn {
  background-color: #9d85ef;
  border-color: #9d85ef;
  border-radius: 0;
}

.data-files-btn-cancel {
  border-radius: 0;
}

#data-files-add {
  width: 140px;
}

.data-files-nav {
  padding-top: 20px;
  /* Pull back sidebar to the left, so it can use (as UI design dictactes)
      the negative space created from `data-files-wrapper`'s `padding` */
  margin-left: -$data-files-wrapper-horizontal-padding;
}

.dropdown-menu {
  border-color: $frontera-portal-color-primary;
  border-radius: 0;
  margin-top: 11px;
  padding: 0;
  left: -20px;
  width: 200px;
}
.dropdown-menu:before {
  position: absolute;
  top: -10px;
  left: 65px;
  display: inline-block;
  border-right: 10px solid transparent;
  border-bottom: 10px solid $frontera-portal-color-primary;
  border-left: 10px solid transparent;
  content: '';
}
.dropdown-menu:after {
  position: absolute;
	top: -9px;
	left: 66px;
	display: inline-block;
	border-right: 9px solid transparent;
	border-bottom: 9px solid #ffffff;
	border-left: 9px solid transparent;
	content: '';
}

.complex-dropdown-item {
  border-top: 1px solid #707070;
}

.multiline-menu-item-wrapper {
  display: inline-block;
  line-height: 1.1em;
  small {
    display: block;
    color: #484848;
  }
}

.dropdown-item{
  padding: 10px 6px;
  size: 10px;
  color: #707070;
  i {
      padding-right: 19px;
  }
  &:hover {
    color: #707070;
  }
}

.dropdown-item:focus,
.dropdown-item:hover {
    background-color: #E6E0FB;
  }

